Add support for multiple locations
Also moved static page application handler to separate file for better
readability.
