# docs/swagger.yaml
@@ -19,6 +19,28 @@ definitions:
       title:
         type: string
     type: object
+  api.Location:
+    properties:
+      address:
+        example: 8.8.8.8:50051
+        type: string
+      created_at:
+        type: string
+      display_name:
+        example: Sydney, AU
+        type: string
+      id:
+        type: string
+      name:
+        description: TODO Add unique constraint to Name
+        example: australia-southeast1
+        type: string
+      order:
+        type: integer
+      secure:
+        description: Flag to indicate whether TLS should be used
+        type: boolean
+    type: object
   api.Report:
     properties:
       audit_results:
@@ -47,6 +69,9 @@ definitions:
       form_factor:
         example: desktop
         type: string
+      location:
+        example: australia-southeast1
+        type: string
       throughput_kbps:
         example: 50000
         type: integer
@@ -67,17 +92,14 @@ paths:
     post:
       consumes:
       - application/json
-      description: |-
-        Run a lighthouse audit to generate a report. The field `raw_json` contains the
-        JSON output returned from lighthouse as a string. Note that `raw_json` field is
-        only returned during initial creation of the report.
+      description: Add a new location from which reports can be generated
       parameters:
-      - description: Lighthouse parameters to generate the report
+      - description: Details of the new location
         in: body
-        name: ReportRequest
+        name: Location
         required: true
         schema:
-          $ref: '#/definitions/api.ReportRequest'
+          $ref: '#/definitions/api.Location'
       produces:
       - application/json
       responses:
@@ -85,7 +107,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/api.Report'
+              $ref: '#/definitions/api.Location'
             type: array
-      summary: Create a Lighthouse Report
+      summary: Add a new location
 swagger: "2.0"
